--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(234218)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(234218 AvlTree.h employee.h employee.cpp test_for_avl.cpp company.cpp company.h EmployeeManager. EmployeeManager.cpp)
+add_executable(234218 AvlTree.h employee.h employee.cpp test_for_avl.cpp company.cpp company.h EmployeeManager.h EmployeeManager.cpp)
