--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(234218)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(234218 AvlTree.h employee.h employee.cpp test_for_avl.cpp company.cpp company.h EmployeeManager.h EmployeeManager.cpp)
+add_executable(234218 AvlTree.h employee.h employee.cpp  company.cpp company.h
+        library1.h library1.cpp EmployeeManager.cpp EmployeeManager.h)
