--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(234218)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(234218 AvlTree.h employee.h employee.cpp  company.cpp company.h
-       EmployeeManager.cpp EmployeeManager.h test_for_avl.cpp)
+add_executable(234218 AvlTree.h employee.h employee.cpp  company.cpp company.h EmployeeManager.h EmployeeManager.cpp
+        main.cpp library1.cpp library1.h)
